2005-03-22  Philippe Gerum  <rpm@xenomai.org>

	* include/nucleus/asm-ppc/system.h (xnarch_switch_to): Do not set
	ALTIVEC or SPE ownership bit to the next thread: leave it to lazy
	handling.

2005-03-20  Heikki Lindholm <holindho@cs.helsinki.fi>

	* include/nucleus/asm-ppc/system.h (xnarch_switch_to): Make sure
	that r2 always references "current" before calling Linux's
	_switch() routine.

2005-03-19  Philippe Gerum  <rpm@xenomai.org>

	* TROUBLESHOOTING: Add entry for lapic issue.

2005-03-18  Philippe Gerum  <rpm@xenomai.org>

	* scripts/GNUmakefile.am (install-exec-local): Add post-install
	hook.

2005-03-16  Philippe Gerum  <rpm@xenomai.org>

	* include/nucleus/asm-*/system.h (xnarch_switch_to): Add membar
	after switch with mm change.

	* nucleus/module.c (stat_read_proc): Add /proc/rtai/stat entry
	aimed at giving various statistics about the schedulable objects.

2005-03-15  Jim Cromie <jcromie@divsol.com>

	* testsuite/latency: Add test duration switch (-T).

	* fusion: Corrected some grammatics in comments.

2005-03-14  Philippe Gerum  <rpm@xenomai.org>

	* testsuite/klatency/latency-module.c (__latency_init): Remove fpu
	support bit.

2005-03-14  Gilles Chanteperdrix  <gilles.chanteperdrix@laposte.net>

	* nucleus/pod.c (xnpod_fault_handler): Print a message in debug
	mode when switching a real-time user-space thread to secondary
	mode after a fault.
	(__xnpod_switch_fpu): Re-enable use of FPU when switching back to
	the FPU owner.
	
	* nucleus/include/asm-*/system.h (xnarch_enable_fpu): Add
	arch-dependent support for previous item.

2005-03-13  Philippe Gerum  <rpm@xenomai.org>

	* arch/ppc/patches: Upgrade to Adeos 2.6.10-ppc-r6c15.

	* arch/i386/patches: Upgrade to Adeos 2.6.9,10-i386-r9c6.

	* skins/rtai: Use POSIXish priority range for tasks.

2005-03-11  Philippe Gerum  <rpm@xenomai.org>

	* fusion: Use module_param[_named]() everywhere instead of the
	deprecated MODULE_PARM() syntax so that we now have some